hw06/test/zm-hw6-classFunc-re-declaration-methond-fieldlist.fmj
public int main() { }

public class C0  {
    class C1 id; // implicit declaration
    public class C0 id(int a, class C1 a, class C0 a){ //error
        return new C0();
    }
}

public class C1 {
    public class C1 id(){ 
        return new C1();
    }
}


